@@ -4,6 +4,8 @@ Werkzeug Changelog
 Version 0.11.6
 --------------
 
+- werkzeug.serving: Still show the client address on bad requests.
+
 Version 0.11.5
 --------------
 
